data/derived/sp14/progs/unify/prog3351.ml.out
Characters 58-60:
  n mod 10
        ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
